--- a/application-dev.yml
+++ b/application-dev.yml
@@ -1,1 +1,14 @@
+spring:
+  application:
+    name:Config-Dev
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+    register-with-eureka: true
+    fetch-registry: true
+  instance:
+    preferIpAddress: true
+    leaseRenewalIntervalInSeconds: 10
 
