--- a/application.yml
+++ b/application.yml
@@ -1,6 +1,19 @@
 spring:
   application:
     name:Config-Default
+  datasource:
+    url: jdbc:mysql://localhost:3306/onlineretailstore
+    username: root
+    password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa:
+    database-platform: org.hibernate.dialect.MySQL5Dialect
+    generate-ddl: true
+    hibernate:
+      ddl-auto: update
+  output:
+    ansi:
+      enabled: always
 
 eureka:
   client:
