--- a/application.yml
+++ b/application.yml
@@ -5,6 +5,9 @@ server:
 spring:
   application:
     name:Config-Default
+  mvc:
+    pathmatch:
+      matching-strategy: ant-path-matcher  
   datasource:
     url: jdbc:mysql://localhost:3306/onlineretailstore
     username: root
@@ -35,3 +38,27 @@ feign:
         connectTimeout: 5000
         readTimeout: 5000
         loggerLevel: basic
+management:
+  health:
+    circuitbreakers:
+      enabled: true
+    ratelimiters:
+      enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: health
+  endpoint:
+    health:
+      show-details: always
+resilience4j:
+  circuitbreaker:
+    instances:
+      productBreaker:
+        failure-rate-threshold: 50
+        minimum-number-of-calls: 5
+        automatic-transition-from-open-to-half-open-enabled: true
+        wait-duration-in-open-state: 6s
+        permitted-number-of-calls-in-half-open-state: 3
+        sliding-window-size: 10
+        sliding-window-type: COUNT_BASED
